Fix: Autocomplete popout scrollbar thumb

--- a/src/components/ui/_scrollbar.scss
+++ b/src/components/ui/_scrollbar.scss
@@ -92,3 +92,7 @@ div[class^="autocomplete-"] div[class*="scrollbarGhostHairline"]{
         }
     }
 }
+// Autocomplete popout
+#autocomplete-popout div[class^="scroller-"]::-webkit-scrollbar-thumb{
+    visibility: visible;
+}
